updates to new branch

--- a/R CODE/thesis_data_model_nn_hour_ahead_take2.Rmd
+++ b/R CODE/thesis_data_model_nn_hour_ahead_take2.Rmd
@@ -244,6 +244,8 @@ updateDF_tMinus1Lags = function(df, lagPredictor, lagPredictorNew, infile){
   return(dfNew)
 }
 
+#test comment github
+
 
 
 # C. Next: update each of these function call outs for the old and the new variable names and input files... 
