--- a/R CODE/masters_thesis_air_pollution_schools_results.Rmd
+++ b/R CODE/masters_thesis_air_pollution_schools_results.Rmd
@@ -11,6 +11,7 @@ _ann_test_8_hr_ahead_reset_13.csv
 # 1. LAGS 1-3, CURRENT METEO, SLOPES PRIOR 8AM
 # MAE & RESULTS TABLE FOR TEST 
 ```{r}
+
 infilePath = file.path("~/Dropbox","NU","THESIS","DATASETS","RESULTS", "PREDICTIONS","ONE_HOUR_AHEAD_PREDICTIONS")
 df         = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_test_1_hr_ahead.csv"),na.strings=c("NA"," "))
 dfNew      = read.csv(file.path(infilePath,"greenwich_eltham_NO2_ann_test_2_hr_ahead.csv"),na.strings=c("NA"," "))
@@ -32,7 +33,7 @@ df
 # CALC the MAE here
 # TESTING: evaluate the quality of the prediction using the test data set:
 df.test.mae = mean(abs(df$predict-df$NO2))
-df.test.mae          # 4.92347 NO2
+df.test.mae          # 4.92347 NO2 (w.out min/max) -> 4.980155 NO2 (w min/max)
 
 # CONFUSION MATRIX
 df$predictOver40 = ifelse(df$predict > 40, 'Predict Above 40', 'Predict Below 40')
@@ -56,6 +57,13 @@ paste0('Inaccurately predict NO2 above 40: ',round(inaccurate_pred_above_40,3))
 # inaccurate predict below 40 when actual is above 40 ****BIG PROBLEM IS THIS IS THE CASE ---- NEED TO MINIMIZE THIS PERCENTAGE ******
 inaccurate_pred_below_40 = table(results$predictOver40, results$actualOver40)[2,1] / (table(results$predictOver40, results$actualOver40)[2,1] + table(results$predictOver40, results$actualOver40)[1,1])
 paste0('Inaccurately predict NO2 below 40: ',round(inaccurate_pred_below_40,3))
+
+# overall accuracy
+overall_accuracy = (table(results$predictOver40, results$actualOver40)[1,1] + table(results$predictOver40, results$actualOver40)[2,2]) / 
+                   (table(results$predictOver40, results$actualOver40)[1,1] + table(results$predictOver40, results$actualOver40)[1,2] +
+                    table(results$predictOver40, results$actualOver40)[2,1] + table(results$predictOver40, results$actualOver40)[2,2]  )
+paste0('Overall accuractely predict NO2: ',round(overall_accuracy,3))
+
 
 ```
 
@@ -111,6 +119,14 @@ paste0('Inaccurately predict NO2 above 40: ',round(inaccurate_pred_above_40,3))
 # inaccurate predict below 40 when actual is above 40 ****BIG PROBLEM IS THIS IS THE CASE ---- NEED TO MINIMIZE THIS PERCENTAGE ******
 inaccurate_pred_below_40 = table(results$predictOver40, results$actualOver40)[2,1] / (table(results$predictOver40, results$actualOver40)[2,1] + table(results$predictOver40, results$actualOver40)[1,1])
 paste0('Inaccurately predict NO2 below 40: ',round(inaccurate_pred_below_40,3))
+
+# overall accuracy
+overall_accuracy = (table(results$predictOver40, results$actualOver40)[1,1] + table(results$predictOver40, results$actualOver40)[2,2]) / 
+                   (table(results$predictOver40, results$actualOver40)[1,1] + table(results$predictOver40, results$actualOver40)[1,2] +
+                    table(results$predictOver40, results$actualOver40)[2,1] + table(results$predictOver40, results$actualOver40)[2,2]  )
+paste0('Overall accuractely predict NO2: ',round(overall_accuracy,3))
+
+
 
 ```
 
